<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        >

<LinearLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/tvWord"
            android:text="@string/word"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tvMeaning"
            android:text="@string/meaning"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tvDate"
            android:text="@string/meaning"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_delete_white_24dp"
            android:id="@+id/btnItemDelete"
            android:layout_weight="1"
            android:contentDescription="@string/asfd"/>

</LinearLayout>

</android.support.v7.widget.CardView>