<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.InsertActivity">

    <include layout="@layout/mytoolbar"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="6"
    >
        <android.support.design.widget.TextInputEditText
                android:id="@+id/tvWord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_word"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="6"
    >
        <android.support.design.widget.TextInputEditText
                android:id="@+id/tvMeaning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_meaning"
        />
    </android.support.design.widget.TextInputLayout>



</LinearLayout>

    <Button
            android:id="@+id/btnSubmit"
            android:text="@string/sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            />
</RelativeLayout>